# Giuseppe

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  pyproject.toml  setup.cfg
dev_notes/: abbreviations.md  design_philosophy.md  todos.md
docs/: abbreviations.rst  code.rst  conf.py  dev_notes.rst  index.rst
docs/dev_notes/: abbreviations.md  abbreviations.rst  design_philosophy.md  design_philosophy.rst  todos.md  todos.rst
docs/theory/: index_reduction.rst  necessary_conditions.rst  theory.rst
examples/brachistochrone/: brachistochrone.py
examples/bvp/sturm-liouville/: sturm-liouville.md  sturm-liouville.py  sturm-liouville_plot.py
examples/ocp/brachistochrone/: brachistochrone.py  (+10 more)
giuseppe/: __init__.py
giuseppe/bvp/: __init__.py  compiled.py  solution.py  symbolic.py
giuseppe/continuation/: __init__.py  handler.py  solution_set.py  solution_subset.py
giuseppe/continuation_new/: protocol.py
giuseppe/data/: __init__.py  solution.py  solution_set.py
giuseppe/data_classes/: __init__.py  annotations.py  remesh.py  solution.py  solution_set.py
giuseppe/dualization/: __init__.py  compiled.py  symbolic.py  symbolic_dualization.py
giuseppe/guess/: __init__.py  auto.py  initialize_guess.py  propagate_guess.py
giuseppe/guess_generation/: __init__.py  auto.py  initialize_guess.py
giuseppe/guess_generators/: __init__.py  constant.py  estimate_dual.py
giuseppe/interface_classes/: __init__.py  symbolic_interfaces.py
giuseppe/io/: __init__.py  annotations.py  solution.py  solution_set.py  string_input.py  symbolic_input.py
giuseppe/numeric_solvers/: __init__.py  protocol.py
giuseppe/ocp/: __init__.py  compiled.py  symbolic.py
giuseppe/problems/: __init__.py  typing.py
giuseppe/utils/: __init__.py  aliases.py  compilation.py  complilation.py  conversion.py  exceptions.py  functions.py  mixins.py  quadratures.py  slicing.py  strings.py  timer.py  typing.py
giuseppe/visualization/: __init__.py  dash_viewer.py  tk_viewer.py
(+272 files in other folders)
