[project]
name = "Giuseppe"
version = "0.2.0"
description = "A general purpose OCP solver"
authors = [
    {name = "Sean Matthew Nolan", email = "Sean.Matthew.Nolan@gmail.com"},
    {name = "Winston C. Levin", email = "winstonclevin@gmail.com"}
]

[build-system]
requires = [
    "setuptools",
    "wheel"
]

build-backend = "setuptools.build_meta"
