[metadata]
name = Giuseppe
version = 0.1.1

[options]
packages = giuseppe
install_requires =
    numpy
    sympy
    numba
    scipy
    casadi
    matplotlib
    tqdm
    python_version >= "3.10"

[options.extras_require]
dev =
    pytest

docs =
    sphinx == 4.5.0
    myst-parser == 0.17.0
    sphinx-autodoc-typehints == 1.18.0
