[metadata]
name = Giuseppe
version = 0.1.2

[options]
package_dir=
    =.
packages=find:
install_requires =
    numpy
    sympy
    numba
    scipy
    casadi
    matplotlib
    tqdm
    bson
    prettyprint

python_version=">=3.8"

[options.extras_require]
dev =
    pytest
    scalene

docs =
    sphinx == 4.5.0
    myst-parser == 0.17.0
    sphinx-autodoc-typehints == 1.18.0
    attrs==21.4.0
